--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
     </div>
     <div class="col-md-8">
         <div class="panel panel-default box">
-
+            <div class="noSEISnoLEVERAGE"></div>
         </div>
     </div>
 </div>
@@ -332,7 +332,6 @@
     {
         $("#loaned").fadeToggle();
     }
-
     var object = $(".PMT").change(function(){
 
         console.clear();
@@ -369,6 +368,74 @@
         console.log(calcs);
 
     });
+
+
+    //amcharts
+    AmCharts.makeChart("chartdiv",
+            {
+                "type": "serial",
+                "categoryField": "category",
+                "startDuration": 1,
+                "categoryAxis": {
+                    "gridPosition": "start"
+                },
+                "trendLines": [],
+                "graphs": [
+                    {
+                        "balloonText": "[[title]] of [[category]]:[[value]]",
+                        "fillAlphas": 1,
+                        "id": "AmGraph-1",
+                        "title": "graph 1",
+                        "type": "column",
+                        "valueField": "column-1"
+                    },
+                    {
+                        "balloonText": "[[title]] of [[category]]:[[value]]",
+                        "fillAlphas": 1,
+                        "id": "AmGraph-2",
+                        "title": "graph 2",
+                        "type": "column",
+                        "valueField": "column-2"
+                    }
+                ],
+                "guides": [],
+                "valueAxes": [
+                    {
+                        "id": "ValueAxis-1",
+                        "title": "Axis title"
+                    }
+                ],
+                "allLabels": [],
+                "balloon": {},
+                "legend": {
+                    "useGraphSettings": true
+                },
+                "titles": [
+                    {
+                        "id": "Title-1",
+                        "size": 15,
+                        "text": "Chart Title"
+                    }
+                ],
+                "dataProvider": [
+                    {
+                        "category": "category 1",
+                        "column-1": 8,
+                        "column-2": 5
+                    },
+                    {
+                        "category": "category 2",
+                        "column-1": 6,
+                        "column-2": 7
+                    },
+                    {
+                        "category": "category 3",
+                        "column-1": 2,
+                        "column-2": 3
+                    }
+                ]
+            }
+    );
 </script>
 
 </body>
